--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- END: Head JS Assets -->
 
     <!-- END: Default Head -->
-<script type="module" crossorigin src="./assets/index.fa7473f2.js"></script>
-  <link rel="modulepreload" href="./assets/vendor.66d6b3cb.js">
-  <link rel="stylesheet" href="./assets/index.e4e199e1.css">
+<script type="module" crossorigin src="/assets/index.4ed8ff14.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.66d6b3cb.js">
+  <link rel="stylesheet" href="/assets/index.6a7e11ca.css">
 </head>
 
 <body>
@@ -81,7 +81,7 @@
 
             <!-- BEGIN: Nav Menu -->
             <ul id="nav-menu"
-                class="bg-white dark:bg-theme-dark-container text-gray-900 dark:text-gray-300 fixed top-0 bottom-0 left-0 z-20 w-80 max-w-screen md:self-end md:flex-grow md:flex md:items-center md:bg-transparent md:dark:bg-transparent md:text-white md:relative md:w-max md:space-x-1 text-sm font-medium whitespace-nowrap transition-transform duration-500 hide">
+                class="bg-white dark:bg-theme-dark-container text-gray-900 dark:text-gray-300 fixed top-0 bottom-0 left-0 z-20 md:self-end md:flex-grow md:flex md:items-center md:bg-transparent md:dark:bg-transparent md:text-white md:relative md:space-x-1 text-sm font-medium whitespace-nowrap hide">
                 <li class="md:hidden text-center mx-auto bg-blue-800 dark:bg-theme-dark-body text-white ">
                     <div class="flex justify-between items-center p-3">
                         <button id="mobile-menu-back" class="focus:outline-none">
