--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- END: Head JS Assets -->
 
     <!-- END: Default Head -->
-<script type="module" crossorigin src="/assets/index.d39558d1.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.66d6b3cb.js">
-  <link rel="stylesheet" href="/assets/index.09406168.css">
+<script type="module" crossorigin src="./assets/index.d39558d1.js"></script>
+  <link rel="modulepreload" href="./assets/vendor.66d6b3cb.js">
+  <link rel="stylesheet" href="./assets/index.09406168.css">
 </head>
 
 <body>
