--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- END: Head JS Assets -->
 
     <!-- END: Default Head -->
-<script type="module" crossorigin src="/assets/index.9f8994c2.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.66d6b3cb.js">
-  <link rel="stylesheet" href="/assets/index.3703ca10.css">
+<script type="module" crossorigin src="./assets/index.9f8994c2.js"></script>
+  <link rel="modulepreload" href="./assets/vendor.66d6b3cb.js">
+  <link rel="stylesheet" href="./assets/index.3703ca10.css">
 </head>
 
 <body>
