--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- END: Head JS Assets -->
 
     <!-- END: Default Head -->
-<script type="module" crossorigin src="./assets/index.9f8994c2.js"></script>
+<script type="module" crossorigin src="./assets/index.9ea1a4f1.js"></script>
   <link rel="modulepreload" href="./assets/vendor.66d6b3cb.js">
-  <link rel="stylesheet" href="./assets/index.3703ca10.css">
+  <link rel="stylesheet" href="./assets/index.c66229ef.css">
 </head>
 
 <body>
@@ -59,7 +59,7 @@
             <!-- BEGIN: Mobile Menu Button -->
             <div class="text-white order-last md:hidden">
                 <button id="mobile-nav-btn"
-                    class="p-2 rounded-full hover:bg-transparent md:hover:bg-blue-700 transition-all focus:outline-none"
+                    class="p-2 rounded-full hover:bg-transparent md:hover:bg-blue-700 transition-all focus:outline-none active:bg-transparent"
                     data-toggle="0">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
@@ -75,13 +75,13 @@
 
             <!-- BEGIN: Mobile Menu Overlay -->
             <div id="mobile-menu-overlay"
-                class="z-10 fixed top-0 bottom-0 left-0 right-0 bg-black opacity-50 w-full h-full cursor-pointer hidden">
+                class="z-10 fixed top-0 bottom-0 left-0 right-0 bg-black dark:bg-white opacity-50 w-full h-full cursor-pointer hidden">
             </div>
             <!-- END: Mobile Menu Overlay -->
 
             <!-- BEGIN: Nav Menu -->
             <ul id="nav-menu"
-                class="bg-white dark:bg-theme-dark-container text-gray-900 dark:text-gray-300 fixed top-0 bottom-0 left-0 z-20 w-80 max-w-screen md:self-end md:flex-grow md:flex md:items-center md:bg-transparent md:dark:bg-transparent md:text-white md:relative md:w-max md:space-x-1 text-sm font-medium whitespace-nowrap hide">
+                class="bg-white dark:bg-theme-dark-container text-gray-900 dark:text-gray-300 fixed top-0 bottom-0 left-0 z-20 w-80 max-w-screen md:self-end md:flex-grow md:flex md:items-center md:bg-transparent md:dark:bg-transparent md:text-white md:static md:w-max md:space-x-1 text-sm font-medium whitespace-nowrap hide">
                 <li class="md:hidden text-center mx-auto bg-blue-800 dark:bg-theme-dark-body text-white ">
                     <div class="flex justify-between items-center p-3">
                         <button id="mobile-menu-back" class="focus:outline-none">
@@ -125,13 +125,13 @@
             <!-- BEGIN: Nav Buttons -->
             <div class="text-white order-first md:order-last flex justify-center items-center space-x-2">
                 <a href="#"
-                    class="p-2 rounded-full md:hover:bg-blue-700 transition-all focus:outline-none inline-flex justify-center items-center space-x-2 cursor-pointer focus:bg-transparent">
+                    class="p-2 rounded-full md:hover:bg-blue-700 transition-all focus:outline-none inline-flex justify-center items-center space-x-2 cursor-pointer focus:bg-transparent active:bg-transparent">
                     <i data-feather="globe"></i>
                     <span class="hidden lg:inline">فارسی</span>
                     <span class="sr-only">Site Language Button</span>
                 </a>
                 <button id="dark-mode"
-                    class="hidden md:inline-block p-2 rounded-full md:hover:bg-blue-700 transition-all focus:outline-none focus:bg-transparent">
+                    class="hidden md:inline-block p-2 rounded-full md:hover:bg-blue-700 transition-all focus:outline-none focus:bg-transparent active:bg-transparent">
                     <i data-feather="sun"></i>
                     <span class="sr-only">Dark Mode Button</span>
                 </button>
