--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- END: Head JS Assets -->
 
     <!-- END: Default Head -->
-<script type="module" crossorigin src="./assets/index.9ea1a4f1.js"></script>
+<script type="module" crossorigin src="./assets/index.393c7523.js"></script>
   <link rel="modulepreload" href="./assets/vendor.66d6b3cb.js">
-  <link rel="stylesheet" href="./assets/index.c66229ef.css">
+  <link rel="stylesheet" href="./assets/index.5b5971c1.css">
 </head>
 
 <body>
@@ -59,7 +59,7 @@
             <!-- BEGIN: Mobile Menu Button -->
             <div class="text-white order-last md:hidden">
                 <button id="mobile-nav-btn"
-                    class="p-2 rounded-full hover:bg-transparent md:hover:bg-blue-700 transition-all focus:outline-none active:bg-transparent"
+                    class="p-2 rounded-full hover:bg-transparent md:hover:bg-blue-700 transition-all focus:outline-real-none active:bg-transparent"
                     data-toggle="0">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
@@ -75,21 +75,21 @@
 
             <!-- BEGIN: Mobile Menu Overlay -->
             <div id="mobile-menu-overlay"
-                class="z-10 fixed top-0 bottom-0 left-0 right-0 bg-black dark:bg-white opacity-50 w-full h-full cursor-pointer hidden">
+                class="z-10 fixed top-0 bottom-0 left-0 right-0 bg-black opacity-50 w-full h-full cursor-pointer hidden">
             </div>
             <!-- END: Mobile Menu Overlay -->
 
             <!-- BEGIN: Nav Menu -->
             <ul id="nav-menu"
                 class="bg-white dark:bg-theme-dark-container text-gray-900 dark:text-gray-300 fixed top-0 bottom-0 left-0 z-20 w-80 max-w-screen md:self-end md:flex-grow md:flex md:items-center md:bg-transparent md:dark:bg-transparent md:text-white md:static md:w-max md:space-x-1 text-sm font-medium whitespace-nowrap hide">
-                <li class="md:hidden text-center mx-auto bg-blue-800 dark:bg-theme-dark-body text-white ">
+                <li class="md:hidden text-center mx-auto bg-blue-800 dark:bg-theme-dark-body text-white">
                     <div class="flex justify-between items-center p-3">
-                        <button id="mobile-menu-back" class="focus:outline-none">
+                        <button id="mobile-menu-back" class="focus:outline-real-none">
                             <i data-feather="arrow-left"></i>
                             <span class="sr-only">Close Mobile Menu</span>
                         </button>
                         <button id="dark-mode-mobile"
-                            class="focus:outline-none">
+                            class="focus:outline-real-none">
                             <i data-feather="sun"></i>
                             <span class="sr-only">Mobile Dark Mode Button</span>
                         </button>
@@ -100,21 +100,21 @@
                 </li>
                 <li>
                     <a href="#"
-                        class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg hover:bg-blue-100 dark: md:hover:bg-blue-700 md:transition-all active">
+                        class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-all active">
                         <span>Home</span>
                         <i data-feather="home" class="ltr:order-last rtl:order-first md:ltr:order-first md:rtl:order-last md:ltr:mr-2 md:rtl:ml-2"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#"
-                        class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-800 md:transition-all">
+                        class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-all">
                         <span>My Briefcase</span>
                         <i data-feather="briefcase" class="ltr:order-last rtl:order-first md:ltr:order-first md:rtl:order-last md:ltr:mr-2 md:rtl:ml-2"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#"
-                        class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg  hover:bg-blue-100 md:hover:bg-blue-700 md:transition-all">
+                        class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg  hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-all">
                         <span>My Card</span>
                         <i data-feather="credit-card" class="ltr:order-last rtl:order-first md:ltr:order-first md:rtl:order-last md:ltr:mr-2 md:rtl:ml-2"></i>
                     </a>
@@ -123,15 +123,15 @@
             <!-- END: Nav Menu -->
 
             <!-- BEGIN: Nav Buttons -->
-            <div class="text-white order-first md:order-last flex justify-center items-center space-x-2">
+            <div class="text-white dark:text-gray-300 order-first md:order-last flex justify-center items-center space-x-2">
                 <a href="#"
-                    class="p-2 rounded-full md:hover:bg-blue-700 transition-all focus:outline-none inline-flex justify-center items-center space-x-2 cursor-pointer focus:bg-transparent active:bg-transparent">
+                    class="p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 transition-all focus:outline-real-none inline-flex justify-center items-center space-x-2 cursor-pointer focus:bg-transparent active:bg-transparent">
                     <i data-feather="globe"></i>
                     <span class="hidden lg:inline">فارسی</span>
                     <span class="sr-only">Site Language Button</span>
                 </a>
                 <button id="dark-mode"
-                    class="hidden md:inline-block p-2 rounded-full md:hover:bg-blue-700 transition-all focus:outline-none focus:bg-transparent active:bg-transparent">
+                    class="hidden md:inline-block p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 transition-all focus:outline-real-none focus:bg-transparent active:bg-transparent">
                     <i data-feather="sun"></i>
                     <span class="sr-only">Dark Mode Button</span>
                 </button>
@@ -146,57 +146,57 @@
             <article class="grid grid-cols-12 gap-6">
                 <h1 class="sr-only">خونه رسول</h1>
                 <a href="#"
-                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 border-2 border-blue-800 grid place-items-center space-y-4 shadow-rs">
+                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs border-2 border-blue-800">
                     <img src="http://www.gravatar.com/avatar/3b3be63a4c2a439b013787" class="w-12 h-12 rounded-full">
-                    <h2>Hello everyone :)</h2>
+                    <h2 class="font-medium">Hello everyone :)</h2>
                     <p class="text-sm text-gray-500">Welcome to my home :)</p>
                 </a>
                 <a href="#"
-                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 grid place-items-center space-y-2 shadow-rs">
+                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="briefcase" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2>Business Card</h2>
+                    <h2 class="font-medium">Business Card</h2>
                     <p class="text-sm text-gray-500">Welcome to my home :)</p>
                 </a>
                 <a href="#"
-                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 grid place-items-center space-y-2 shadow-rs">
+                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="zap" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2>Abilities</h2>
+                    <h2 class="font-medium">Abilities</h2>
                     <p class="text-sm text-gray-500">Welcome to my home :)</p>
                 </a>
                 <a href="#"
-                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 grid place-items-center space-y-2 shadow-rs">
+                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="target" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2>Collaboraions</h2>
+                    <h2 class="font-medium">Collaboraions</h2>
                     <p class="text-sm text-gray-500">Welcome to my home :)</p>
                 </a>
                 <a href="#"
-                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 grid place-items-center space-y-2 shadow-rs">
+                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="database" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2>Vitamin C</h2>
+                    <h2 class="font-medium">Vitamin C</h2>
                     <p class="text-sm text-gray-500">Welcome to my home :)</p>
                 </a>
                 <a href="#"
-                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 grid place-items-center space-y-2 shadow-rs">
+                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="file-text" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2>CV</h2>
+                    <h2 class="font-medium">CV</h2>
                     <p class="text-sm text-gray-500">Welcome to my home :)</p>
                 </a>
                 <a href="#"
-                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 grid place-items-center space-y-2 shadow-rs">
+                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="shopping-bag" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2>Courses</h2>
+                    <h2 class="font-medium">Courses</h2>
                     <p class="text-sm text-gray-500">Welcome to my home :)</p>
                 </a>
                 <a href="#"
-                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 grid place-items-center space-y-2 shadow-rs">
+                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="credit-card" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2>Pay</h2>
+                    <h2 class="font-medium">Pay</h2>
                     <p class="text-sm text-gray-500">Welcome to my home :)</p>
                 </a>
                 <a href="#"
-                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 grid place-items-center space-y-2 shadow-rs">
+                    class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="globe" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2>فارسی</h2>
+                    <h2 class="font-medium">فارسی</h2>
                     <p class="text-sm text-gray-500">Welcome to my home :)</p>
                 </a>
             </article>
