--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- END: Head JS Assets -->
 
     <!-- END: Default Head -->
-<script type="module" crossorigin src="./assets/index.393c7523.js"></script>
+<script type="module" crossorigin src="./assets/index.23137939.js"></script>
   <link rel="modulepreload" href="./assets/vendor.66d6b3cb.js">
-  <link rel="stylesheet" href="./assets/index.5b5971c1.css">
+  <link rel="stylesheet" href="./assets/index.9b4d8c5a.css">
 </head>
 
 <body>
@@ -84,7 +84,7 @@
                 class="bg-white dark:bg-theme-dark-container text-gray-900 dark:text-gray-300 fixed top-0 bottom-0 left-0 z-20 w-80 max-w-screen md:self-end md:flex-grow md:flex md:items-center md:bg-transparent md:dark:bg-transparent md:text-white md:static md:w-max md:space-x-1 text-sm font-medium whitespace-nowrap hide">
                 <li class="md:hidden text-center mx-auto bg-blue-800 dark:bg-theme-dark-body text-white">
                     <div class="flex justify-between items-center p-3">
-                        <button id="mobile-menu-back" class="focus:outline-real-none">
+                        <button id="mobile-menu-back" class="inline-block w-12 h-12 focus-visible:outline-real-none active:outline-real-none focus:outline-real-none">
                             <i data-feather="arrow-left"></i>
                             <span class="sr-only">Close Mobile Menu</span>
                         </button>
@@ -125,13 +125,13 @@
             <!-- BEGIN: Nav Buttons -->
             <div class="text-white dark:text-gray-300 order-first md:order-last flex justify-center items-center space-x-2">
                 <a href="#"
-                    class="p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 transition-all focus:outline-real-none inline-flex justify-center items-center space-x-2 cursor-pointer focus:bg-transparent active:bg-transparent">
+                    class="p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 transition-all focus:outline-real-none inline-flex justify-center items-center space-x-2 cursor-pointer">
                     <i data-feather="globe"></i>
                     <span class="hidden lg:inline">فارسی</span>
                     <span class="sr-only">Site Language Button</span>
                 </a>
                 <button id="dark-mode"
-                    class="hidden md:inline-block p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 transition-all focus:outline-real-none focus:bg-transparent active:bg-transparent">
+                    class="hidden md:inline-block p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 transition-all focus:outline-real-none focus-visible:outline-real-none active:outline-real-none">
                     <i data-feather="sun"></i>
                     <span class="sr-only">Dark Mode Button</span>
                 </button>
@@ -148,56 +148,56 @@
                 <a href="#"
                     class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs border-2 border-blue-800">
                     <img src="http://www.gravatar.com/avatar/3b3be63a4c2a439b013787" class="w-12 h-12 rounded-full">
-                    <h2 class="font-medium">Hello everyone :)</h2>
-                    <p class="text-sm text-gray-500">Welcome to my home :)</p>
+                    <h2 class="text-lg font-medium">Hello everyone :)</h2>
+                    <p class="text-base text-gray-600 dark:text-gray-400">Welcome to my home :)</p>
                 </a>
                 <a href="#"
                     class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="briefcase" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2 class="font-medium">Business Card</h2>
-                    <p class="text-sm text-gray-500">Welcome to my home :)</p>
+                    <h2 class="text-lg font-medium">Business Card</h2>
+                    <p class="text-base text-gray-600 dark:text-gray-400">Welcome to my home :)</p>
                 </a>
                 <a href="#"
                     class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="zap" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2 class="font-medium">Abilities</h2>
-                    <p class="text-sm text-gray-500">Welcome to my home :)</p>
+                    <h2 class="text-lg font-medium">Abilities</h2>
+                    <p class="text-base text-gray-600 dark:text-gray-400">Welcome to my home :)</p>
                 </a>
                 <a href="#"
                     class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="target" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2 class="font-medium">Collaboraions</h2>
-                    <p class="text-sm text-gray-500">Welcome to my home :)</p>
+                    <h2 class="text-lg font-medium">Collaboraions</h2>
+                    <p class="text-base text-gray-600 dark:text-gray-400">Welcome to my home :)</p>
                 </a>
                 <a href="#"
                     class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="database" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2 class="font-medium">Vitamin C</h2>
-                    <p class="text-sm text-gray-500">Welcome to my home :)</p>
+                    <h2 class="text-lg font-medium">Vitamin C</h2>
+                    <p class="text-base text-gray-600 dark:text-gray-400">Welcome to my home :)</p>
                 </a>
                 <a href="#"
                     class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="file-text" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2 class="font-medium">CV</h2>
-                    <p class="text-sm text-gray-500">Welcome to my home :)</p>
+                    <h2 class="text-lg font-medium">CV</h2>
+                    <p class="text-base text-gray-600 dark:text-gray-400">Welcome to my home :)</p>
                 </a>
                 <a href="#"
                     class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="shopping-bag" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2 class="font-medium">Courses</h2>
-                    <p class="text-sm text-gray-500">Welcome to my home :)</p>
+                    <h2 class="text-lg font-medium">Courses</h2>
+                    <p class="text-base text-gray-600 dark:text-gray-400">Welcome to my home :)</p>
                 </a>
                 <a href="#"
                     class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="credit-card" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2 class="font-medium">Pay</h2>
-                    <p class="text-sm text-gray-500">Welcome to my home :)</p>
+                    <h2 class="text-lg font-medium">Pay</h2>
+                    <p class="text-base text-gray-600 dark:text-gray-400">Welcome to my home :)</p>
                 </a>
                 <a href="#"
                     class="bg-white dark:bg-theme-dark-card col-span-12 max-w-full md:col-span-4 rounded-md py-10 flex flex-col place-items-center space-y-3 shadow-rs">
                     <i data-feather="globe" class="text-blue-800 dark:text-blue-600 w-12 h-12 stroke-1-5"></i>
-                    <h2 class="font-medium">فارسی</h2>
-                    <p class="text-sm text-gray-500">Welcome to my home :)</p>
+                    <h2 class="text-lg font-medium">فارسی</h2>
+                    <p class="text-base text-gray-600 dark:text-gray-400">Welcome to my home :)</p>
                 </a>
             </article>
         </main>
