--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- END: Head JS Assets -->
 
     <!-- END: Default Head -->
-<script type="module" crossorigin src="./assets/index.acb4d243.js"></script>
+<script type="module" crossorigin src="./assets/index.3c155766.js"></script>
   <link rel="modulepreload" href="./assets/vendor.66d6b3cb.js">
-  <link rel="stylesheet" href="./assets/index.ae1178c0.css">
+  <link rel="stylesheet" href="./assets/index.0606c223.css">
 </head>
 
 <body>
@@ -58,8 +58,8 @@
 
             <!-- BEGIN: Mobile Menu Button -->
             <div class="text-white order-last md:hidden">
-                <button id="mobile-nav-btn"
-                    class="p-2 rounded-full hover:bg-transparent md:hover:bg-blue-700 transition-all focus:outline-real-none active:bg-transparent"
+                <a href="#" id="mobile-nav-btn"
+                    class="p-2 rounded-full md:hover:bg-blue-700 transition-all focus:outline-none"
                     data-toggle="0">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
@@ -69,7 +69,7 @@
                         <line x1="6" y1="20" x2="6" y2="14"></line>
                     </svg>
                     <span class="sr-only">Mobile Navigation Button</span>
-                </button>
+                </a>
             </div>
             <!-- END: Mobile Menu Button -->
 
@@ -84,15 +84,15 @@
                 class="bg-white dark:bg-theme-dark-container text-gray-900 dark:text-gray-300 fixed top-0 bottom-0 left-0 z-20 w-80 max-w-screen md:self-end md:flex-grow md:flex md:items-center md:bg-transparent md:dark:bg-transparent md:text-white md:static md:w-max md:space-x-1 text-sm font-medium whitespace-nowrap hide">
                 <li class="md:hidden text-center mx-auto bg-blue-800 dark:bg-theme-dark-body text-white">
                     <div class="flex justify-between items-center p-3">
-                        <button id="mobile-menu-back" class="inline-block w-12 h-12 focus-visible:outline-real-none active:outline-real-none focus:outline-real-none">
+                        <a href="#" id="mobile-menu-back" class="inline-block focus:outline-none">
                             <i data-feather="arrow-left"></i>
                             <span class="sr-only">Close Mobile Menu</span>
-                        </button>
-                        <button id="dark-mode-mobile"
-                            class="focus:outline-real-none">
+                        </a>
+                        <a href="#" id="dark-mode-mobile"
+                            class="focus:outline-none">
                             <i data-feather="sun"></i>
                             <span class="sr-only">Mobile Dark Mode Button</span>
-                        </button>
+                        </a>
                     </div>
                     <div class="flex justify-center items-center px-2 py-10">
                         <p class="text-2xl">Welcome to our website!</p>
@@ -125,16 +125,16 @@
             <!-- BEGIN: Nav Buttons -->
             <div class="text-white dark:text-gray-300 order-first md:order-last flex justify-center items-center space-x-2">
                 <a href="#"
-                    class="p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 transition-all focus:outline-real-none inline-flex justify-center items-center space-x-2 cursor-pointer">
+                    class="p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 transition-all focus:outline-none inline-flex justify-center items-center space-x-2 cursor-pointer">
                     <i data-feather="globe"></i>
                     <span class="hidden lg:inline">فارسی</span>
                     <span class="sr-only">Site Language Button</span>
                 </a>
-                <button id="dark-mode"
-                    class="hidden md:inline-block p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 transition-all focus:outline-real-none focus-visible:outline-real-none active:outline-real-none">
+                <a href="#" id="dark-mode"
+                    class="hidden md:inline-block p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 transition-all focus:outline-none">
                     <i data-feather="sun"></i>
                     <span class="sr-only">Dark Mode Button</span>
-                </button>
+                </a>
             </div>
             <!-- END: Nav Buttons -->
 
