--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- END: Head JS Assets -->
 
     <!-- END: Default Head -->
-<script type="module" crossorigin src="./assets/index.3c155766.js"></script>
+<script type="module" crossorigin src="./assets/index.de7e239c.js"></script>
   <link rel="modulepreload" href="./assets/vendor.66d6b3cb.js">
-  <link rel="stylesheet" href="./assets/index.0606c223.css">
+  <link rel="stylesheet" href="./assets/index.e85a1e90.css">
 </head>
 
 <body>
@@ -59,7 +59,7 @@
             <!-- BEGIN: Mobile Menu Button -->
             <div class="text-white order-last md:hidden">
                 <a href="#" id="mobile-nav-btn"
-                    class="p-2 rounded-full md:hover:bg-blue-700 transition-all focus:outline-none"
+                    class="block p-2 rounded-full md:hover:bg-blue-700 transition-all focus:outline-none"
                     data-toggle="0">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
