--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa-IR" dir="rtl">
 
 <head>
     <!-- BEGIN: Default Head -->
@@ -32,15 +32,23 @@
     <!-- END: Head JS Assets -->
 
     <!-- END: Default Head -->
-<script type="module" crossorigin src="./assets/index.de7e239c.js"></script>
+<script type="module" crossorigin src="./assets/index.e796dcd6.js"></script>
   <link rel="modulepreload" href="./assets/vendor.66d6b3cb.js">
-  <link rel="stylesheet" href="./assets/index.e85a1e90.css">
+  <link rel="stylesheet" href="./assets/index.c969fc48.css">
 </head>
 
 <body>
+
+    
     <div class="app">
         <!-- BEGIN: Header -->
         <!-- END: Header -->
+
+        <!-- BEGIN: Loader -->
+        <div id="preloader" class="bg-blue-800 z-50 fixed top-0 bottom-0 left-0 right-0 w-screen h-screen overflow-hidden grid place-items-center select-none">
+            <div class="text-white text-6xl animate-pulse opacity-75">Resulog</div>
+        </div>
+        <!-- END: Loader -->
 
         <!-- BEGIN: Navbar -->
         <nav
@@ -57,9 +65,9 @@
             <!-- END: Site Logo -->
 
             <!-- BEGIN: Mobile Menu Button -->
-            <div class="text-white order-last md:hidden">
+            <div class="text-white order-last rtl:order-first md:hidden">
                 <a href="#" id="mobile-nav-btn"
-                    class="block p-2 rounded-full md:hover:bg-blue-700 transition-all focus:outline-none"
+                    class="block p-2 rounded-full md:hover:bg-blue-700 md:transition-colors focus:outline-none"
                     data-toggle="0">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
@@ -84,7 +92,7 @@
                 class="bg-white dark:bg-theme-dark-container text-gray-900 dark:text-gray-300 fixed top-0 bottom-0 left-0 z-20 w-80 max-w-screen md:self-end md:flex-grow md:flex md:items-center md:bg-transparent md:dark:bg-transparent md:text-white md:static md:w-max md:space-x-1 text-sm font-medium whitespace-nowrap hide">
                 <li class="md:hidden text-center mx-auto bg-blue-800 dark:bg-theme-dark-body text-white">
                     <div class="flex justify-between items-center p-3">
-                        <a href="#" id="mobile-menu-back" class="inline-block focus:outline-none">
+                        <a href="#" id="mobile-menu-back" class="inline-block focus:outline-none rtl:order-last">
                             <i data-feather="arrow-left"></i>
                             <span class="sr-only">Close Mobile Menu</span>
                         </a>
@@ -100,38 +108,38 @@
                 </li>
                 <li>
                     <a href="#"
-                        class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-all active">
-                        <span>Home</span>
-                        <i data-feather="home" class="ltr:order-last rtl:order-first md:ltr:order-first md:rtl:order-last md:ltr:mr-2 md:rtl:ml-2"></i>
+                        class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-colors active">
+                        <span>خانه</span>
+                        <i data-feather="home" class="ltr:order-last md:order-first md:ltr:mr-2 md:rtl:ml-2"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#"
-                        class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-all">
+                        class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-colors">
                         <span>My Briefcase</span>
-                        <i data-feather="briefcase" class="ltr:order-last rtl:order-first md:ltr:order-first md:rtl:order-last md:ltr:mr-2 md:rtl:ml-2"></i>
+                        <i data-feather="briefcase" class="ltr:order-last md:order-first md:ltr:mr-2 md:rtl:ml-2"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#"
-                        class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg  hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-all">
+                        class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg  hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-colors">
                         <span>My Card</span>
-                        <i data-feather="credit-card" class="ltr:order-last rtl:order-first md:ltr:order-first md:rtl:order-last md:ltr:mr-2 md:rtl:ml-2"></i>
+                        <i data-feather="credit-card" class="ltr:order-last md:order-first md:ltr:mr-2 md:rtl:ml-2"></i>
                     </a>
                 </li>
             </ul>
             <!-- END: Nav Menu -->
 
             <!-- BEGIN: Nav Buttons -->
-            <div class="text-white dark:text-gray-300 order-first md:order-last flex justify-center items-center space-x-2">
+            <div class="text-white dark:text-gray-300 order-first rtl:order-last md:order-last flex justify-center items-center space-x-2">
                 <a href="#"
-                    class="p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 transition-all focus:outline-none inline-flex justify-center items-center space-x-2 cursor-pointer">
-                    <i data-feather="globe"></i>
+                    class="p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-colors focus:outline-none inline-flex justify-center items-center space-x-2 cursor-pointer">
+                    <i data-feather="globe" class="ltr:order-last md:order-first md:ltr:mr-2 md:rtl:ml-2"></i>
                     <span class="hidden lg:inline">فارسی</span>
                     <span class="sr-only">Site Language Button</span>
                 </a>
                 <a href="#" id="dark-mode"
-                    class="hidden md:inline-block p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 transition-all focus:outline-none">
+                    class="hidden md:inline-block p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-colors focus:outline-none">
                     <i data-feather="sun"></i>
                     <span class="sr-only">Dark Mode Button</span>
                 </a>
