--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <title>Document</title>
 
     <!-- BEGIN: CSS Assets -->
-    <link rel="stylesheet" href="./assets/index.c969fc48.css">
+    <link rel="stylesheet" href="./assets/index.0d14ca97.css">
     <!-- END: CSS Assets -->
 
     <!-- BEGIN: Head JS Assets -->
+    <script type="module" crossorigin src="./assets/index.d4d9c9d4.js"></script>
     <link rel="modulepreload" href="./assets/vendor.66d6b3cb.js">
-    <script type="module" crossorigin src="./assets/index.e796dcd6.js"></script>
 
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
@@ -32,6 +32,7 @@
         }
     </script>
     <!-- END: Head JS Assets -->
+
     <!-- END: Default Head -->
 </head>
 
@@ -125,7 +126,7 @@
                     <a href="#"
                         class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-colors active">
                         <span>خانه</span>
-                        <i data-feather="home" class="ltr:order-last md:order-first md:ltr:mr-2 md:rtl:ml-2"></i>
+                        <i data-feather="home" class="order-last md:order-first md:ltr:mr-2 md:rtl:ml-2"></i>
                         <span class="sr-only">Menu Item 1</span>
                     </a>
                 </li>
@@ -133,7 +134,7 @@
                     <a href="#"
                         class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-colors">
                         <span>My Briefcase</span>
-                        <i data-feather="briefcase" class="ltr:order-last md:order-first md:ltr:mr-2 md:rtl:ml-2"></i>
+                        <i data-feather="briefcase" class="order-last md:order-first md:ltr:mr-2 md:rtl:ml-2"></i>
                         <span class="sr-only">Menu Item 2</span>
                     </a>
                 </li>
@@ -141,7 +142,7 @@
                     <a href="#"
                         class="flex justify-between md:justify-center items-center px-5 py-4 rounded-b-none md:rounded-t-lg  hover:bg-blue-100 md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-colors">
                         <span>My Card</span>
-                        <i data-feather="credit-card" class="ltr:order-last md:order-first md:ltr:mr-2 md:rtl:ml-2"></i>
+                        <i data-feather="credit-card" class="order-last md:order-first md:ltr:mr-2 md:rtl:ml-2"></i>
                         <span class="sr-only">Menu Item 3</span>
                     </a>
                 </li>
@@ -155,7 +156,7 @@
                 <!-- BEGIN: Site Language Button -->
                 <a href="#"
                     class="p-2 rounded-full md:hover:bg-blue-700 dark:hover:bg-gray-900 md:transition-colors focus:outline-none inline-flex justify-center items-center space-x-2 cursor-pointer">
-                    <i data-feather="globe" class="ltr:order-last md:order-first md:ltr:mr-2 md:rtl:ml-2"></i>
+                    <i data-feather="globe" class="order-last md:order-first md:ltr:mr-2 md:rtl:ml-2"></i>
                     <span class="hidden lg:inline">فارسی</span>
                     <span class="sr-only">Site Language Button</span>
                 </a>
